test/corpus/control.txt
======
return
======
life :: () -> u32 { return 42; }
-----

(source_file
  (declaration
    (identifier)
    (function (int_type) (return (integer)))))

======
defer expression
======
life :: () -> u32 { 
  defer 32;
}
-----

(source_file
  (declaration
    (identifier)
    (function (int_type) (defer (integer)))))
