test/corpus/declaration.txt
======
namespace
======
arcana :: namespace { }
-----

(source_file
  (declaration
    (identifier)
    (namespace)))

===
struct
===
cursor :: struct { }
---
(source_file
  (declaration
    (identifier)
    (struct)))

===
bitset
===
token :: bitset { }
---
(source_file
  (declaration
    (identifier)
    (bitset)))
